<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_blue"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/mulish_extra_bold"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:textSize="48sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:fontFamily="@font/mulish_italic"
            android:text="@string/meet_the_right_person"
            android:textColor="@color/white" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:background="@drawable/top_corner_radius_rectangle">

            <TextView
                android:id="@+id/welcome_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/mulish_bold"
                android:text="@string/welcome_back"
                android:textColor="@color/dark_blue"
                android:textSize="24sp"
                app:layout_constraintLeft_toLeftOf="@id/email_edit_text_layout"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/sign_in_to_continue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_to_continue"
                app:layout_constraintStart_toStartOf="@id/welcome_back"
                app:layout_constraintTop_toBottomOf="@id/welcome_back" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_edit_text_layout"
                android:layout_width="0dp"
                android:layout_height="70dp"
                app:layout_constraintBottom_toTopOf="@id/password_edit_text_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sign_in_to_continue"
                app:layout_constraintWidth_percent=".85"
                android:layout_marginBottom="10dp"
                app:boxStrokeColor="@color/light_bleu"
                app:hintTextColor="@color/light_bleu">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/email"
                    android:backgroundTint="#00ffffff"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_edit_text_layout"
                android:layout_width="0dp"
                android:layout_height="70dp"
                app:passwordToggleEnabled="true"
                app:layout_constraintBottom_toTopOf="@id/password_edit_text_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sign_in_to_continue"
                app:layout_constraintWidth_percent=".85"
                app:boxStrokeColor="@color/light_bleu"
                app:hintTextColor="@color/light_bleu">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/password"
                    android:backgroundTint="#00ffffff"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sign_btn"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:elevation="10dp"
                android:fontFamily="@font/mulish_bold"
                android:text="@string/sign_in"
                android:textAllCaps="true"
                android:textSize="20sp"
                app:backgroundTint="@color/light_bleu"
                app:cornerRadius="40dp"
                app:layout_constraintBottom_toTopOf="@id/sign_up_button"
                app:layout_constraintEnd_toEndOf="@id/password_edit_text_layout"
                app:layout_constraintStart_toStartOf="@id/password_edit_text_layout"
                app:layout_constraintTop_toBottomOf="@id/password_edit_text_layout" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sign_up_button"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:fontFamily="@font/mulish_bold"
                android:stateListAnimator="@null"
                android:text="@string/sign_up"
                android:textAllCaps="true"
                android:textColor="@color/dark_blue"
                android:textSize="20sp"
                app:backgroundTint="@color/white"
                app:cornerRadius="40dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/password_edit_text_layout"
                app:layout_constraintStart_toStartOf="@id/password_edit_text_layout"
                app:layout_constraintTop_toBottomOf="@id/sign_btn"
                app:strokeColor="@color/light_bleu"
                app:strokeWidth="1dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</FrameLayout>